--- a/page2.html
+++ b/page2.html
@@ -97,13 +97,13 @@
  
                     <div>
                         <!-- Search button -->
-                        <button
+                       <a href="page7.html" <button
                             onclick="shop()"
                             class="btn btn-lg btn-light fas fa-shopping-bag mr-2"
                             type="button"
                             aria-label="Go to checkout"
                         >
-                        </button> 
+                        </button></a>
                         <!-- Search button -->
                         <button
                             onclick="search()"
