--- a/page6.html
+++ b/page6.html
@@ -89,13 +89,13 @@
                     <!-- REPLACE buttons with bootstsrap styles and font awesome icons  -->
                     <div>
                         <!-- Search button -->
-                        <button
+                        <a href="page7.html"><button
                             onclick="shop()"
                             class="btn btn-lg btn-light fas fa-shopping-bag mr-2"
                             type="button"
                             aria-label="Go to checkout"
                         >
-                        </button> 
+                          </button></a> 
                         <!-- Search button -->
                         <button
                             onclick="search()"
@@ -203,7 +203,7 @@
                              
                                 </br></br>
                                <a href="page2.html" ><button type="button"  class="continue-shopping btn btn-light btn-lg">Continue Shopping</button></a>
-                              <button type="button" class="checkout btn btn-light btn-lg">Checkout</button>
+                             <a href="page7"><button type="button" class="checkout btn btn-light btn-lg">Checkout</button></a>
                               </br></br>
                           </div>
     </div>
