--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project Template 3</title>
+    <title>Code First Girls Project</title>
 
     <!-- Bootstrap CSS -->
     <link
@@ -165,12 +165,12 @@
                         <div class="carousel-inner">
                             <!-- Carousel item -->
                             <div class="carousel-item active">            
-                                <img src="https://res.cloudinary.com/ninaw/image/upload/c_scale,w_2400/v1590711354/A_MGFjZjlkZDY2YjhlM2JmObBYWAm_zUOgxh5spt_nuiukUc_yR8mzZu0e-OPUnNPXdyp6fi59AqnINsKmdeTzsWwbZwlf-3rmqLRmSzXw-4Ej0aEjUEC8gtFfF1JsAAwh_m2atba.jpg" class="d-block w-100" alt="Placeholder image">
+                                <img src="https://res.cloudinary.com/ninaw/image/upload/c_scale,w_2400/v1590711354/A_MGFjZjlkZDY2YjhlM2JmObBYWAm_zUOgxh5spt_nuiukUc_yR8mzZu0e-OPUnNPXdyp6fi59AqnINsKmdeTzsWwbZwlf-3rmqLRmSzXw-4Ej0aEjUEC8gtFfF1JsAAwh_m2atba.jpg" class="d-block w-100" alt="Blue bikini">
                             </div><!-- end of Carousel item -->
 
                             <!-- Carousel item -->
                             <div class="carousel-item">
-                                <img src="https://res.cloudinary.com/ninaw/image/upload/c_scale,w_2400/v1590711996/A_MGFjZjlkZDY_cajtew.jpg" class="d-block w-100" alt="Placeholder image">
+                                <img src="https://res.cloudinary.com/ninaw/image/upload/c_scale,w_2400/v1590711996/A_MGFjZjlkZDY_cajtew.jpg" class="d-block w-100" alt="Limegreen swimsuit">
                             </div><!-- end of Carousel item -->
                         </div>
 
@@ -195,25 +195,25 @@
 
                         <div class="row">
                             <figure class="col-lg-3 col-md-6 col-sm-12">
-                                <img src="https://hertta598090.invisionapp.com/assets/A_MGFjZjlkZDY2YjhlM2JmOWtxclg7N6YWRiTdX0GNHeVsUEqfx5eomK2uGXP9R11HgpthYPUNwRyBXkjVD22Z5-b502t-e5Grg_Y8YJ3AD9VqCmG39RhBOi5nDDirBgu0" class="d-block w-100" alt="Placeholder image">
+                                <img src="https://hertta598090.invisionapp.com/assets/A_MGFjZjlkZDY2YjhlM2JmOWtxclg7N6YWRiTdX0GNHeVsUEqfx5eomK2uGXP9R11HgpthYPUNwRyBXkjVD22Z5-b502t-e5Grg_Y8YJ3AD9VqCmG39RhBOi5nDDirBgu0" class="d-block w-100" alt="Red Floral Dress">
 
                                 <figcaption class="caption text-center py-2">Red Floral Dress</figcaption>
                             </figure>
 
                             <figure class="col-lg-3 col-md-6 col-sm-12">
-                                <img src="https://hertta598090.invisionapp.com/assets/A_MGFjZjlkZDY2YjhlM2JmObytt8v3cymB6lMwfSyXefXwskIBbgHirdE9Oho97SlK_IYDzCXs2UzCszkvk7469wbe0DhujH-JovXQN0lZFS7aomj6X49B_-NZZ_7mfNY-" class="d-block w-100" alt="Placeholder image">
+                                <img src="https://hertta598090.invisionapp.com/assets/A_MGFjZjlkZDY2YjhlM2JmObytt8v3cymB6lMwfSyXefXwskIBbgHirdE9Oho97SlK_IYDzCXs2UzCszkvk7469wbe0DhujH-JovXQN0lZFS7aomj6X49B_-NZZ_7mfNY-" class="d-block w-100" alt="Long White Open Front Dress">
 
                                 <figcaption class="caption text-center py-2">Long White Open Front Dress</figcaption>
                             </figure>
 
                             <figure class="col-lg-3 col-md-6 col-sm-12">
-                                <img src="https://hertta598090.invisionapp.com/assets/A_MGFjZjlkZDY2YjhlM2JmOWtxclg7N6YWRiTdX0GNHeVsUEqfx5eomK2uGXP9R11HgpthYPUNwRyBXkjVD22Z5-b502t-e5Grg_Y8YJ3AD9VqCmG39RhBOi5nDDirBgu0" class="d-block w-100" alt="Placeholder image">
+                                <img src="https://hertta598090.invisionapp.com/assets/A_MGFjZjlkZDY2YjhlM2JmOWtxclg7N6YWRiTdX0GNHeVsUEqfx5eomK2uGXP9R11HgpthYPUNwRyBXkjVD22Z5-b502t-e5Grg_Y8YJ3AD9VqCmG39RhBOi5nDDirBgu0" class="d-block w-100" alt="Red Floral Dress">
 
                                 <figcaption class=" caption text-center py-2">Red Floral Dress</figcaption>
                             </figure>
 
                             <figure class="col-lg-3 col-md-6 col-sm-12">
-                                <img src="https://hertta598090.invisionapp.com/assets/A_MGFjZjlkZDY2YjhlM2JmObytt8v3cymB6lMwfSyXefXwskIBbgHirdE9Oho97SlK_IYDzCXs2UzCszkvk7469wbe0DhujH-JovXQN0lZFS7aomj6X49B_-NZZ_7mfNY-" class="d-block w-100" alt="Placeholder image">
+                                <img src="https://hertta598090.invisionapp.com/assets/A_MGFjZjlkZDY2YjhlM2JmObytt8v3cymB6lMwfSyXefXwskIBbgHirdE9Oho97SlK_IYDzCXs2UzCszkvk7469wbe0DhujH-JovXQN0lZFS7aomj6X49B_-NZZ_7mfNY-" class="d-block w-100" alt="Long White Open Front Dress">
 
                                 <figcaption class="caption text-center py-2">Long White Open Front Dress</figcaption>
                             </figure>
