--- a/page3.html
+++ b/page3.html
@@ -15,7 +15,7 @@
     >
   <link rel="stylesheet"  type="text/css" href="page3.css">
   <script src="https://kit.fontawesome.com/43d3af6d93.js" crossorigin="anonymous"></script>
-  <title>Clothes Shop</title>
+  <title>Code First Girls Project</title>
   </head>
 
   <body>
@@ -157,12 +157,12 @@
             <div class="carousel-inner">
                 <!-- Carousel item -->
                 <div class="carousel-item active">
-                    <img src="https://images.unsplash.com/photo-1583623733237-4d5764a9dc82?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80" class="d-block w-100 " alt="Placeholder image">
+                    <img src="https://images.unsplash.com/photo-1583623733237-4d5764a9dc82?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80" class="d-block w-100 " alt="Brown leather handbag with details">
                 </div><!-- end of Carousel item -->
 
                 <!-- Carousel item -->
                 <div class="carousel-item">
-                    <img src="https://images.unsplash.com/photo-1583623733237-4d5764a9dc82?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80" class="d-block w-100" alt="Placeholder image">
+                    <img src="https://images.unsplash.com/photo-1583623733237-4d5764a9dc82?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80" class="d-block w-100" alt="Brown leather handbag with details">
                 </div><!-- end of Carousel item -->
 
             <!-- Carousel controls left -->
