--- a/page8.html
+++ b/page8.html
@@ -15,7 +15,7 @@
     >
   <link rel="stylesheet"  type="text/css" href="page3.css">
   <script src="https://kit.fontawesome.com/43d3af6d93.js" crossorigin="anonymous"></script>
-  <title>Clothes Shop</title>
+  <title>Code First Girls Project</title>
   </head>
 
   <body>
