--- a/page6.html
+++ b/page6.html
@@ -15,7 +15,7 @@
     >
   <link rel="stylesheet"  type="text/css" href="page3.css">
   <script src="https://kit.fontawesome.com/43d3af6d93.js" crossorigin="anonymous"></script>
-  <title>Clothes Shop</title>
+  <title>Code First Girls Project</title>
   </head>
 
   <body>
@@ -157,12 +157,12 @@
             <div class="carousel-inner">
                 <!-- Carousel item -->
                 <div class="carousel-item active">
-                    <img src="https://res.cloudinary.com/duuvleoim/image/upload/v1591088248/picture_k2azhu.jpg" class="d-block w-100 " alt="Placeholder image">
+                    <img src="https://res.cloudinary.com/duuvleoim/image/upload/v1591088248/picture_k2azhu.jpg" class="d-block w-100 " alt="Dark red leather handbag with golden details">
                 </div><!-- end of Carousel item -->
 
                 <!-- Carousel item -->
                 <div class="carousel-item">
-                    <img src="https://res.cloudinary.com/duuvleoim/image/upload/v1591088248/picture_k2azhu.jpg" class="d-block w-100" alt="Placeholder image">
+                    <img src="https://res.cloudinary.com/duuvleoim/image/upload/v1591088248/picture_k2azhu.jpg" class="d-block w-100" alt="Dark red leather handbag with golden details">
                 </div><!-- end of Carousel item -->
 
             <!-- Carousel controls left -->
