--- a/page8.html
+++ b/page8.html
@@ -199,7 +199,7 @@
   </div>
                        </br>
                               <div class="checkout-button">
-                                <button type="button" class="add-to-bag btn btn-dark btn-lg btn-block">Add to bag</button>
+                                <a href="page7.html"><button type="button" class="add-to-bag btn btn-dark btn-lg btn-block">Add to bag</button></a>
                              
                                 </br></br>
                                <a href="page2.html"><button type="button" class="continue-shopping btn btn-light btn-lg">Continue Shopping</button></a>
