--- a/page7.html
+++ b/page7.html
@@ -245,7 +245,7 @@
         <div class="col mb-2">
             <div class="row">
                 <div class="col-sm-12  col-md-6">
-                    <button class="btn btn-lg btn-block btn-light">Continue Shopping</button>
+                   <a href="page2.html" <button class="btn btn-lg btn-block btn-light">Continue Shopping</button></a>
                 </div>
                 <div class="col-sm-12 col-md-6 text-right">
                     <button class="btn btn-lg btn-block btn-dark text-uppercase">Checkout</button>
