--- a/page7.html
+++ b/page7.html
@@ -28,7 +28,7 @@
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
         crossorigin="anonymous"
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="./main.css">
+    <link rel="stylesheet" href="page7.css">
 </head>
 
 <body>
