--- a/page2.html
+++ b/page2.html
@@ -293,6 +293,9 @@
             </div>  
         </div><!-- end of footer-nav -->
     </footer>
+</div><!-- MISSING: closing tag for Content -->
+</div><!-- MISSING: closing tag for Container -->
+</div><!-- MISSING: closing tag for Wrapper-->
   </body>
 
   </html>
