--- a/page3.html
+++ b/page3.html
@@ -207,7 +207,7 @@
                               </br></br>
                           </div>
     </div>
-              </container>
+              </div>
   </main>
           
           
