--- a/page2.html
+++ b/page2.html
@@ -21,7 +21,7 @@
     <link
         rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
-        crossorigin="anonymous"
+        crossorigin="anonymous">
     <!-- Stylesheet -->
     <link rel="stylesheet" href="page2.css">
 </head>
@@ -111,11 +111,8 @@
                             type="button"
                             aria-label="Search site"
                         >
-                        </button>
-                    </div>
-                  </div>
-          </div>
-      </div>
+                         </button>
+                </div>
       </header>
 
     <main>
