--- a/page4.html
+++ b/page4.html
@@ -164,7 +164,7 @@
         <h2 class="text-center"> Contact Us</h2>
   <div class="form-group ">
     <label for="fname">Your first name</label>
-    <input type="fname" class="form-control form-control-lg" id="fname" placeholder="First lame">
+    <input type="fname" class="form-control form-control-lg" id="fname" placeholder="First name">
   </div>
    
    <div class="form-group">
