--- a/page7.html
+++ b/page7.html
@@ -25,7 +25,7 @@
     <link
         rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
-        crossorigin="anonymous"
+        crossorigin="anonymous">
     <!-- Stylesheet -->
     <link rel="stylesheet" href="page7.css">
 </head>
