--- a/page5.html
+++ b/page5.html
@@ -129,7 +129,7 @@
          </li>
 
          <li class="nav-item">
-            a class="nav-link text-dark" href="page2.html">Designers</a>
+            <a class="nav-link text-dark" href="page2.html">Designers</a>
          </li>
 
          <li class="nav-item">
